# clean-pack

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh-CN.md
.github/workflows/: release.yml
scripts/: install.sh
src/: filter.rs  main.rs  tar_gz.rs  zip.rs
tests/: integration_tests.rs
